[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menus/Accueil.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Accueil" type="Node2D" parent="."]

[node name="CreerBouton" type="Button" parent="Accueil"]
margin_left = 893.018
margin_top = 502.726
margin_right = 1008.02
margin_bottom = 522.726
text = "Cr√©er une partie"

[node name="RejoindreBouton" type="Button" parent="Accueil"]
margin_left = 882.228
margin_top = 551.812
margin_right = 1024.23
margin_bottom = 571.812
text = "Rejoindre une partie"

[node name="PseudoLabel" type="Label" parent="Accueil"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 910.224
margin_top = 81.0307
margin_right = 995.224
margin_bottom = 95.0307
text = "Votre pseudo"
max_lines_visible = 1

[node name="PseudoTextEdit" type="TextEdit" parent="Accueil"]
margin_left = 857.0
margin_top = 126.0
margin_right = 1063.0
margin_bottom = 149.0

[node name="ErreurLabel" type="Label" parent="Accueil"]
margin_left = 849.179
margin_top = 460.279
margin_right = 1051.18
margin_bottom = 474.279

[node name="IPServeur" type="Node2D" parent="."]
visible = false

[node name="IPLabel" type="Label" parent="IPServeur"]
margin_left = 891.338
margin_top = 87.1694
margin_right = 976.338
margin_bottom = 101.169
text = "IP du serveur"

[node name="IPTextEdit" type="TextEdit" parent="IPServeur"]
margin_left = 875.257
margin_top = 117.089
margin_right = 996.257
margin_bottom = 143.089

[node name="ConnecterBouton" type="Button" parent="IPServeur"]
margin_left = 886.118
margin_top = 199.812
margin_right = 981.118
margin_bottom = 219.812
text = "Se connecter"

[node name="RetourBouton" type="Button" parent="IPServeur"]
margin_left = 886.118
margin_top = 248.908
margin_right = 981.118
margin_bottom = 268.908
text = "Retour"

[node name="ErreurLabel" type="Label" parent="IPServeur"]
margin_left = 788.634
margin_top = 292.495
margin_right = 1110.63
margin_bottom = 306.495
[connection signal="pressed" from="Accueil/CreerBouton" to="." method="_on_CreerBouton_pressed"]
[connection signal="pressed" from="Accueil/RejoindreBouton" to="." method="_on_RejoindreBouton_pressed"]
[connection signal="focus_exited" from="Accueil/PseudoTextEdit" to="." method="_on_PseudoTextEdit_focus_exited"]
[connection signal="pressed" from="IPServeur/ConnecterBouton" to="." method="_on_ConnecterBouton_pressed"]
[connection signal="pressed" from="IPServeur/RetourBouton" to="." method="_on_RetourBouton_pressed"]
